--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   sqflite: ^2.3.2
   path_provider: ^2.1.1
   intl: ^0.19.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
